updating [Rock paper scissors]

--- a/Oop/index.html
+++ b/Oop/index.html
@@ -5,12 +5,22 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>JS</title>
 	<link rel="stylesheet" href="">
+	<script src="script.js" type="text/javascript"></script>
 </head>
 <body>
 
 
+<h1>Rock, Paper, Scissors</h1>
 
-<script src="script.js" type="text/javascript" charset="utf-8" async defer></script>
+<form onsubmit="return RockPaperScissors()"> 
+<input id="playerChoice"  type="text" placeholder="Enter your choice"/>
+<input type="submit">
+</form>
+
+<div id="output"></div>
+
+
+
 
 
 </body>
