--- a/Web-Api/Task1/index.html
+++ b/Web-Api/Task1/index.html
@@ -5,6 +5,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>JS</title>
 	<link rel="stylesheet" href="">
+	<style type="text/css">
+		h1{
+			color: #000;
+			font-size: 2em;
+		}
+	</style>
 
 </head>
 <body>
