--- a/jquery/Task2/index.html
+++ b/jquery/Task2/index.html
@@ -1,16 +1,16 @@
 <!-- 2. Create a to-do list app. Each to-do has a title and a description.
 
- The top of the document starts with a “add to-do form”. 
+ The top of the document starts with a “add to-do form”.
 
  When you add an item it appears in the list but only shows the title.
 
-  Store items in an array, each item is an object. 
+  Store items in an array, each item is an object.
 
-  You can go up and down with the arrow keys in the list and the current item is highlighted. Track highlighted item in an array. 
+  You can go up and down with the arrow keys in the list and the current item is highlighted. Track highlighted item in an array.
 
-  When Enter is hit on an item it should expend and show the description. 
+  When Enter is hit on an item it should expend and show the description.
 
-  Items have an X to delete. Hitting backspace should also delete. 
+  Items have an X to delete. Hitting backspace should also delete.
 
   The list object should also be stored in and loaded from localStorage. (6 hours)
  -->
@@ -28,20 +28,19 @@
 
 
 </head>
-<body>  
-  
+<body>
+
 
   <div id="container">
     <h1>To Do Form</h1>
     <input type="text">
-    
+
     <ul>
-      
+
     </ul>
   </div>
 
 
-<script src="script.js" type="text/javascript" charset="utf-8" async defer></script>
+<script src="new.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
 </html>
-
