updating js [ lottery draw]

--- a/Vanilla Js/Task3/index.html
+++ b/Vanilla Js/Task3/index.html
@@ -10,7 +10,7 @@
 	width: 800px;
 	height: 100%;
 	margin: 0 auto;
-}	
+}
 .wrapper div {
   width: 100px;
   height: 100px;
@@ -22,9 +22,9 @@
 
 	text-align: center;
 	vertical-align: middle;
-	line-height: 100px;   
+	line-height: 100px;
 	color: white;
-	font-size: 30px;  
+	font-size: 30px;
 }
 .wrapper  div:nth-child(1) {
   background: red;
@@ -56,7 +56,7 @@ button {
 .animation{
   -webkit-animation: spin 1s linear, move 1s linear forwards;
   animation: spin 1s linear, move 1s linear forwards;
-    
+
   -webkit-transition: all 1s ease;
   transition: all 1s ease;
 }
@@ -93,7 +93,7 @@ button {
 
 	<h1>Lottery Draw</h1>
 
-	<button type="submit" class='draw' onclick="randomNumber()">Draw</button>
+	<button type="submit" id="draw" class='draw'>Draw</button>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
