--- a/js-modular/src/index.html
+++ b/js-modular/src/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>React testing</title>
+	<title>JS testing</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div id="react-app"></div>
 	<script src="js/bundle.js"></script>
 </body>
 </html>
