adding updates [ footer updates ]

--- a/project-new/src/index.html
+++ b/project-new/src/index.html
@@ -89,11 +89,11 @@
 			</ul>
 		</div>
 
-		<div class="social-media">
+		<div class="social-media" role="">
 			<h4>Folllow us</h4>
-			<a href="#" class="fa fa-facebook"></a>
-			<a href="#" class="fa fa-twitter"></a>
-			<a href="#" class="fa fa-instagram"></a>
+			<a href="" class="fa fa-facebook"></a>
+			<a href="" class="fa fa-twitter"></a>
+			<a href="" class="fa fa-instagram"></a>
 		</div>
 
 
