--- a/project-new/src/index.html
+++ b/project-new/src/index.html
@@ -12,7 +12,8 @@
 	<header>
 
 		<nav class="navigation" role="navigation">
-			<ul>
+			<input type="button" class="nav-button" role="button">
+			<ul class="nav-list">
 				<li class="nav-item"><a href="#"></a>Product</li>
 				<li class="nav-item"><a href="#"></a>About</li>
 				<li class="nav-item"><a href="#"></a>Portfolio</li>
@@ -22,7 +23,7 @@
 
 		</nav>
 
-		<section class="main-wrapper" role="contentinfo">
+		<section class="main-wrapper">
 			<div class="content">
 				<h1>basement</h1>
 			</div>
@@ -31,15 +32,17 @@
 		<section class="more-info">
 			<div class="info">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-				<input type="button" role="button" value='more info'>
+				<input type="button" role="button" value='more info' class="info-btn">
 			</div>
 
 		</section>
 
 	</header>
 
-	<article class="" role="main">
-		<h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
+	<main cmainlass="" role="main">
+		<article>
+			<h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
+		</article>
 
 		<aside class="side-one">
 			<h1>Fantastic service, i'm excited</h1>
@@ -60,41 +63,39 @@
 
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit</p>
 		</aside>
-		<div>
+	</main>
 
-		</div>
 
-	</article>
 
 	<footer>
-		<div class="copyright">
+		<section class="copyright">
 			<h3>Basement</h3>
-		</div>
+		</section>
 
-		<div class="product">
+		<section class="product">
 			<h4>Product</h4>
 			<ul>
 				<li><a href="">Features</a></li>
 				<li><a href=""></a>Promo</li>
 				<li><a href=""></a>Download</li>
 			</ul>
-		</div>
+		</section>
 
-		<div class="contact">
+		<section class="contact">
 			<h4>Contact</h4>
 			<ul>
 				<li><a href="">Find us</a></li>
 				<li><a href=""></a>FAQ</li>
 				<li><a href=""></a>Help</li>
 			</ul>
-		</div>
+		</section>
 
-		<div class="social-media" role="">
+		<section class="social-media" role="">
 			<h4>Folllow us</h4>
 			<a href="" class="fa fa-facebook"></a>
 			<a href="" class="fa fa-twitter"></a>
 			<a href="" class="fa fa-instagram"></a>
-		</div>
+		</section>
 
 
 
