final changes [new project]

--- a/project-new/src/index.html
+++ b/project-new/src/index.html
@@ -12,13 +12,13 @@
 	<header>
 
 		<nav class="navigation" role="navigation">
-			<input type="button" class="nav-button" role="button">
+			<input type="button" class="nav-button" id="nav-button" role="button">
 			<ul class="nav-list">
-				<li class="nav-item"><a href="#"></a>Product</li>
-				<li class="nav-item"><a href="#"></a>About</li>
-				<li class="nav-item"><a href="#"></a>Portfolio</li>
-				<li class="nav-item"><a href="#"></a>Team</li>
-				<li class="nav-item"><a href="#"></a>Contact</li>
+				<li class="nav-item"><a href="#">Product</a></li>
+				<li class="nav-item"><a href="#">About</a></li>
+				<li class="nav-item"><a href="#">Portfolio</a></li>
+				<li class="nav-item"><a href="#">Team</a></li>
+				<li class="nav-item"><a href="#">Contact</a></li>
 			</ul>
 
 		</nav>
@@ -39,7 +39,7 @@
 
 	</header>
 
-	<main cmainlass="" role="main">
+	<main class="" role="main">
 		<article>
 			<h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
 		</article>
@@ -54,7 +54,7 @@
 			</div>
 		</aside>
 
-		<aside class="side-two">
+		<section class="side-two">
 			<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error repellendus quas neque sunt cum. Exercitationem ipsum voluptates natus, neque eligendi modi! Quos, nulla fuga aut placeat, voluptatum laborum quod tempora.</p>
 
@@ -62,45 +62,41 @@
 			<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
 
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit</p>
-		</aside>
+		</section>
 	</main>
 
-
-
-	<footer>
+	<footer role="contentinfo">
 		<section class="copyright">
-			<h3>Basement</h3>
+			<span class="title">Basement</span>
 		</section>
 
 		<section class="product">
-			<h4>Product</h4>
-			<ul>
+			<span class="sub-title">Product</span>
+			<ul class="product-list">
 				<li><a href="">Features</a></li>
-				<li><a href=""></a>Promo</li>
-				<li><a href=""></a>Download</li>
+				<li><a href="">Promo</a></li>
+				<li><a href="">Download</a></li>
 			</ul>
 		</section>
 
 		<section class="contact">
-			<h4>Contact</h4>
-			<ul>
+			<span class="sub-title">Contact</span>
+			<ul class="contact-list">
 				<li><a href="">Find us</a></li>
-				<li><a href=""></a>FAQ</li>
-				<li><a href=""></a>Help</li>
+				<li><a href="">FAQ</a></li>
+				<li><a href="">Help</a></li>
 			</ul>
 		</section>
 
-		<section class="social-media" role="">
-			<h4>Folllow us</h4>
+		<section class="social-media">
+			<span class="sub-title">Folllow us</span>
 			<a href="" class="fa fa-facebook"></a>
 			<a href="" class="fa fa-twitter"></a>
 			<a href="" class="fa fa-instagram"></a>
 		</section>
 
-
-
 	</footer>
 
-
+<script src="js/bundle.js" type="text/javascript"></script>
 </body>
 </html>
